@@ -1,3 +1,5 @@
+* Bug fix when a symbol is given has join table to habtm association [#75]
+
 * Association matchers now searches in the right database for tables [#73]
 
 * validate_length_of accepts :with_kind_of to enable it to work with associations [#69]
